--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "MIT",
   "dependencies": {
     "aws-sdk": "^2.601.0",
+    "axios": "^0.19.2",
+    "form-data": "^3.0.0",
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
